Added merge executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,24 +29,42 @@ set_target_properties(larch_autogen
 
 set(CMAKE_CXX_CLANG_TIDY clang-tidy)
 
-add_executable(larch
-    $<TARGET_OBJECTS:larch_autogen>
+function(larch_compile_opts PRODUCT)
+    target_compile_options(${PRODUCT} PUBLIC -std=c++17 -Werror -Wall -Wextra -pedantic -pedantic-errors -Wno-unused)
+    if (${CMAKE_BUILD_TYPE} STREQUAL "San")
+        target_compile_options(${PRODUCT} PUBLIC -fsanitize=address -fsanitize=undefined)
+    endif()
+    target_include_directories(${PRODUCT} PUBLIC include tools test ${Protobuf_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR}/range-v3/install/include)
+    add_dependencies(${PRODUCT} range-v3)
+endfunction()
+
+function(larch_link_opts PRODUCT)
+    if (${CMAKE_BUILD_TYPE} STREQUAL "San")
+        target_link_libraries(${PRODUCT} PUBLIC -lasan -lubsan)
+    endif()
+    target_link_libraries(${PRODUCT} PUBLIC -lz)
+    target_link_libraries(${PRODUCT} PUBLIC nlohmann_json::nlohmann_json)
+    target_link_libraries(${PRODUCT} PUBLIC ${Protobuf_LIBRARIES})
+endfunction()
+
+function(larch_executable PRODUCT)
+    add_executable(${PRODUCT} ${ARGN} $<TARGET_OBJECTS:larch_autogen>)
+    larch_compile_opts(${PRODUCT})
+    larch_link_opts(${PRODUCT})
+    target_link_libraries(${PRODUCT} PUBLIC larch)
+endfunction()
+
+add_library(larch
     src/history_dag.cpp
     src/history_dag_loader.cpp
     src/history_dag_node_storage.cpp
-    src/zlib_stream.cpp
+    src/zlib_stream.cpp)
+larch_compile_opts(larch)
+larch_link_opts(larch)
+
+larch_executable(larch-test
     test/main.cpp
     test/test_merge.cpp)
 
-add_dependencies(larch range-v3)
-
-if (${CMAKE_BUILD_TYPE} STREQUAL "San")
-target_compile_options(larch PUBLIC -fsanitize=address -fsanitize=undefined)
-target_link_libraries(larch PUBLIC -lasan -lubsan)
-endif()
-
-target_compile_options(larch PUBLIC -std=c++17 -Werror -Wall -Wextra -pedantic -pedantic-errors -Wno-unused)
-target_include_directories(larch PUBLIC include test ${Protobuf_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR}/range-v3/install/include)
-target_link_libraries(larch PUBLIC -lz)
-target_link_libraries(larch PUBLIC nlohmann_json::nlohmann_json)
-target_link_libraries(larch PUBLIC ${Protobuf_LIBRARIES})
+larch_executable(merge
+    tools/merge.cpp)
