--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,10 @@ function(larch_compile_opts PRODUCT)
     if (${CMAKE_BUILD_TYPE} STREQUAL "San")
         target_compile_options(${PRODUCT} PUBLIC -fsanitize=address -fsanitize=undefined)
     endif()
-    target_include_directories(${PRODUCT} PUBLIC include tools test ${Protobuf_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR}/range-v3/install/include)
+    target_include_directories(${PRODUCT} PUBLIC include tools test)
+    target_include_directories(${PRODUCT} PUBLIC ${Protobuf_INCLUDE_DIR})
+    target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+    target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/range-v3/install/include)
     add_dependencies(${PRODUCT} range-v3)
 endfunction()
 
