--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ set(CMAKE_CXX_CLANG_TIDY clang-tidy)
 function(larch_compile_opts PRODUCT)
     target_compile_options(${PRODUCT} PUBLIC -march=native -std=c++17 -Werror -Wall -Wextra -pedantic -pedantic-errors -Wno-unused)
     if (${CMAKE_BUILD_TYPE} STREQUAL "San")
-        target_compile_options(${PRODUCT} PUBLIC -fsanitize=address -fsanitize=undefined)
+        target_compile_options(${PRODUCT} PUBLIC -Og -g3 -fsanitize=address -fsanitize=undefined)
     endif()
     target_include_directories(${PRODUCT} PUBLIC include tools test)
     target_include_directories(${PRODUCT} PUBLIC ${Protobuf_INCLUDE_DIR})
