Switched usher branch; added usher as library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ ExternalProject_Add(isa-l
 
 ExternalProject_Add(oneTBB
     GIT_REPOSITORY      https://github.com/oneapi-src/oneTBB
-	GIT_TAG             cc2c04e2f5363fb8b34c10718ce406814810d1e6
+	GIT_TAG             2019_U9
     GIT_SHALLOW         true
     GIT_PROGRESS        true
     UPDATE_DISCONNECTED true
@@ -50,11 +50,12 @@ ExternalProject_Add(oneTBB
 )
 
 ExternalProject_Add(usher
-    GIT_REPOSITORY      https://github.com/matsengrp/usher.git
-    #GIT_TAG             1-initial-DAG
+    GIT_REPOSITORY      https://github.com/yatisht/usher
+    GIT_TAG             usher-optimize-dev
     GIT_SHALLOW         true
     GIT_PROGRESS        true
     UPDATE_DISCONNECTED true
+    PATCH_COMMAND       sed -i "s@oneTBB-2019_U9/include/@@g" ${PROJECT_BINARY_DIR}/usher/src/usher/src/check_samples_place/import_vcf.cpp && cat ${PROJECT_SOURCE_DIR}/add_usher_lib.cmake >> ${PROJECT_BINARY_DIR}/usher/src/usher/CMakeLists.txt
     CMAKE_CACHE_ARGS    -DCMAKE_INSTALL_PREFIX:STRING=${PROJECT_BINARY_DIR}/usher/install -DCMAKE_PREFIX_PATH:STRING=${PROJECT_BINARY_DIR}/oneTBB/src/oneTBB/cmake;${PROJECT_BINARY_DIR}/isa-l/install -DCMAKE_CXX_FLAGS:STRING=-I${PROJECT_BINARY_DIR}/isa-l/install/include
     CMAKE_ARGS			-DTBB_DIR=${PROJECT_BINARY_DIR}/oneTBB/src/oneTBB
     PREFIX              usher
@@ -80,18 +81,20 @@ function(larch_compile_opts PRODUCT)
     target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
     target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/range-v3/install/include)
     target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/oneTBB/src/oneTBB/include)
+    target_include_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/usher/src)
     add_dependencies(${PRODUCT} range-v3 usher)
 endfunction()
 
 function(larch_link_opts PRODUCT)
 	target_link_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/usher/src/usher-build/tbb_cmake_build/tbb_cmake_build_subdir_release)
+    target_link_directories(${PRODUCT} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/usher/src/usher-build)
     if (${USE_ASAN})
         target_link_libraries(${PRODUCT} PUBLIC -lasan -lubsan)
     endif()
     target_link_libraries(${PRODUCT} PUBLIC -lz)
     target_link_libraries(${PRODUCT} PUBLIC nlohmann_json::nlohmann_json)
     target_link_libraries(${PRODUCT} PUBLIC ${Protobuf_LIBRARIES})
-    target_link_libraries(${PRODUCT} PUBLIC tbb_preview -lstdc++fs)
+    target_link_libraries(${PRODUCT} PUBLIC tbb_preview -lstdc++fs usher-lib)
 endfunction()
 
 function(larch_executable PRODUCT)
