--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ larch_executable(larch-test
     test/test_clade_idx.cpp
     test/test_compact_genome.cpp
     test/test_merge.cpp
+    test/test_subtree_weight.cpp
     test/test_synthetic.cpp)
 
 larch_executable(merge
