add weight_accum test that doesn't compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,7 @@ larch_executable(larch-test
     test/test_subtree_weight.cpp
     test/test_write_parsimony.cpp
     test/test_count_trees.cpp
+    test/test_weight_accum.cpp
     test/test_synthetic.cpp)
 
 larch_executable(merge
