--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,7 @@ larch_executable(larch-test
     test/test_write_parsimony.cpp
     test/test_count_trees.cpp
     test/test_weight_accum.cpp
+    test/test_weight_counter.cpp
     test/test_synthetic.cpp)
 
 larch_executable(merge
