Add callback for usher's found moves (#26)
Add callback for usher's found moves

Co-authored-by: Will Dumm <wrhdumm@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,13 @@ larch_executable(dag_diff
 larch_executable(dag2dot
     tools/dag2dot.cpp)
 
+add_library(usher
+    ${MATOPTIMIZE_SRC}
+    ${DETAILED_MUTATIONS_PROTO_SRCS}
+    ${DETAILED_MUTATIONS_PROTO_HDRS})
+larch_compile_opts(usher)
+larch_link_opts(usher)
+
 larch_executable(larch-usher
     tools/larch-usher.cpp
     src/produce_mat.cpp
@@ -150,4 +157,5 @@ larch_executable(larch-usher
     ${DETAILED_MUTATIONS_PROTO_SRCS}
     ${DETAILED_MUTATIONS_PROTO_HDRS}
     )
-target_link_libraries( larch-usher PRIVATE ${Boost_LIBRARIES} ZLIB::ZLIB ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS})
+target_link_libraries( larch-usher PRIVATE ${Boost_LIBRARIES} ZLIB::ZLIB ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS} usher)
+add_dependencies(larch-usher usher)
