--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,9 +142,9 @@ larch_executable(larch-test
     test/main.cpp
     #test/synthetic_dags.cpp
     #test/test_clade_idx.cpp
-    #test/test_compact_genome.cpp
+    test/test_compact_genome.cpp
     #test/test_dag_trimming.cpp
-    #test/test_loading.cpp
+    test/test_loading.cpp
     #test/test_matOptimize.cpp
     test/test_merge.cpp
     #test/test_sample_tree.cpp
