--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.16)
 project (larch)
 
+if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
+  cmake_policy(SET CMP0135 NEW)
+endif()
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS yes)
 
 include(FetchContent)
@@ -153,6 +157,7 @@ larch_executable(larch-test
     test/test_matOptimize.cpp
     test/test_merge.cpp
     test/test_sample_tree.cpp
+    test/test_sample_best_tree.cpp
     test/test_subtree_weight.cpp
     test/test_weight_accum.cpp
     test/test_weight_counter.cpp
