--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,8 +157,10 @@ larch_executable(larch-test
     test/test_count_trees.cpp
     test/test_dag_trimming.cpp
     test/test_loading.cpp
+    test/test_mapped_nodes.cpp
     test/test_matOptimize.cpp
     test/test_merge.cpp
+    test/test_overlay.cpp
     test/test_sample_tree.cpp
     test/test_sample_best_tree.cpp
     test/test_spr.cpp
