--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,8 @@ function(larch_compile_opts PRODUCT)
     target_compile_options(${PRODUCT} PUBLIC -march=native -std=c++17)
     if (${USE_ASAN})
         target_compile_options(${PRODUCT} PUBLIC -Og -g3 -fsanitize=address -fsanitize=undefined -fno-sanitize-recover)
+    elseif(${USE_TSAN})
+        target_compile_options(${PRODUCT} PUBLIC -Og -g3 -fsanitize=thread) 
     endif()
     target_include_directories(${PRODUCT} PUBLIC include tools test)
     target_include_directories(${PRODUCT} PUBLIC ${Protobuf_INCLUDE_DIR})
@@ -95,6 +97,8 @@ function(larch_link_opts PRODUCT)
     target_link_libraries(${PRODUCT} PUBLIC larch-autogen)
     if (${USE_ASAN})
         target_link_libraries(${PRODUCT} PUBLIC -lasan -lubsan)
+    elseif(${USE_TSAN})
+        target_link_libraries(${PRODUCT} PUBLIC -ltsan)
     endif()
     target_link_libraries(${PRODUCT} PUBLIC -lz)
     target_link_libraries(${PRODUCT} PUBLIC nlohmann_json::nlohmann_json)
@@ -128,6 +132,8 @@ add_library(usher
 target_compile_options(usher PRIVATE -march=native -std=c++17 -w)
 if (${USE_ASAN})
     target_compile_options(usher PUBLIC -Og -g3 -fsanitize=address -fsanitize=undefined -fno-sanitize-recover)
+elseif(${USE_TSAN})
+    target_compile_options(usher PUBLIC -Og -g3 -fsanitize=thread) 
 endif()
 target_include_directories(usher PUBLIC include)
 target_include_directories(usher PUBLIC ${Protobuf_INCLUDE_DIR})
